--- a/app/src/main/res/layouts/activity/layout/activity_main.xml
+++ b/app/src/main/res/layouts/activity/layout/activity_main.xml
@@ -4,7 +4,7 @@
     <data>
         <variable
             name="viewModel"
-            type="com.merseyside.template.main.model.MainViewModel" />
+            type="com.merseyside.news.main.model.MainViewModel" />
     </data>
 
     <androidx.coordinatorlayout.widget.CoordinatorLayout
@@ -30,7 +30,7 @@
 
             </com.google.android.material.appbar.AppBarLayout>
 
-            <fragment
+            <androidx.fragment.app.FragmentContainerView
                 android:id="@+id/container"
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
