--- a/app/src/main/res/navigation/nav_graph.xml
+++ b/app/src/main/res/navigation/nav_graph.xml
@@ -7,7 +7,7 @@
 
     <fragment
         android:id="@+id/home_fragment"
-        android:name="com.merseyside.home.ui.HomeFragment"
+        android:name="com.merseyside.newsList.ui.HomeFragment"
         android:label="HomeFragment">
     </fragment>
 
