--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -47,31 +47,31 @@
 
 
 <!--  Text styles  -->
-    <style name="LangApp.Headline2" parent="TextAppearance.MaterialComponents.Headline2">
+    <style name="NewsApp.Headline2" parent="TextAppearance.MaterialComponents.Headline2">
         <item name="android:textSize">@dimen/second_largest_text_size</item>
     </style>
 
-    <style name="LangApp.Headline3" parent="TextAppearance.MaterialComponents.Headline3">
+    <style name="NewsApp.Headline3" parent="TextAppearance.MaterialComponents.Headline3">
         <item name="android:textSize">@dimen/largest_text_size</item>
     </style>
 
-    <style name="LangApp.Headline4" parent="TextAppearance.MaterialComponents.Headline4">
+    <style name="NewsApp.Headline4" parent="TextAppearance.MaterialComponents.Headline4">
         <item name="android:textSize">@dimen/very_large_text_size</item>
     </style>
 
-    <style name="LangApp.Headline5" parent="TextAppearance.MaterialComponents.Headline5">
+    <style name="NewsApp.Headline5" parent="TextAppearance.MaterialComponents.Headline5">
         <item name="android:textSize">@dimen/large_text_size</item>
     </style>
 
-    <style name="LangApp.Headline6" parent="TextAppearance.MaterialComponents.Headline6">
+    <style name="NewsApp.Headline6" parent="TextAppearance.MaterialComponents.Headline6">
         <item name="android:textSize">@dimen/medium_text_size</item>
     </style>
 
-    <style name="LangApp.Body1" parent="TextAppearance.MaterialComponents.Body1">
+    <style name="NewsApp.Body1" parent="TextAppearance.MaterialComponents.Body1">
         <item name="android:textSize">@dimen/text_size</item>
     </style>
 
-    <style name="LangApp.Body2" parent="TextAppearance.MaterialComponents.Body2">
+    <style name="NewsApp.Body2" parent="TextAppearance.MaterialComponents.Body2">
         <item name="android:textSize">@dimen/small_text_size</item>
     </style>
 
