Add newsapi library

--- a/app/src/main/res/navigation/nav_graph.xml
+++ b/app/src/main/res/navigation/nav_graph.xml
@@ -3,12 +3,12 @@
     xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:id="@+id/nav_graph"
-    app:startDestination="@id/home_fragment">
+    app:startDestination="@id/news_fragment">
 
     <fragment
-        android:id="@+id/home_fragment"
-        android:name="com.merseyside.newsList.ui.HomeFragment"
-        android:label="HomeFragment">
+        android:id="@+id/news_fragment"
+        android:name="com.merseyside.newsList.ui.view.NewsFragment"
+        android:label="NewsFragment">
     </fragment>
 
 </navigation>
