--- a/features/newsList/src/main/res/layouts/fragment/layout/fragment_news.xml
+++ b/features/newsList/src/main/res/layouts/fragment/layout/fragment_news.xml
@@ -9,11 +9,18 @@
 
     </data>
 
-    <androidx.constraintlayout.widget.ConstraintLayout
+    <LinearLayout
+        android:orientation="vertical"
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:animateLayoutChanges="true">
+        android:layout_height="match_parent">
 
-    </androidx.constraintlayout.widget.ConstraintLayout>
+        <com.merseyside.archy.presentation.view.merseyRecyclerView.MerseyRecyclerView
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:orientation="vertical"
+            app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
+            app:pagedList="@{viewModel.newsPagedList}" />
+
+    </LinearLayout>
 
 </layout>
