--- a/app/src/main/res/layouts/activity/layout/activity_main.xml
+++ b/app/src/main/res/layouts/activity/layout/activity_main.xml
@@ -30,7 +30,7 @@
 
             </com.google.android.material.appbar.AppBarLayout>
 
-            <androidx.fragment.app.FragmentContainerView
+            <fragment
                 android:id="@+id/container"
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
