--- a/features/newsList/src/main/res/layouts/views/layout/view_news.xml
+++ b/features/newsList/src/main/res/layouts/views/layout/view_news.xml
@@ -8,9 +8,10 @@
     </data>
 
     <LinearLayout
-        android:orientation="horizontal"
+        android:orientation="vertical"
         android:layout_width="match_parent"
-        android:layout_height="match_parent">
+        android:layout_height="wrap_content"
+        android:padding="@dimen/normal_spacing">
 
         <TextView
             android:layout_width="wrap_content"
