--- a/app/src/main/res/layouts/activity/layout/activity_main.xml
+++ b/app/src/main/res/layouts/activity/layout/activity_main.xml
@@ -25,8 +25,7 @@
                     android:layout_width="match_parent"
                     android:layout_height="?attr/actionBarSize"
                     android:theme="@style/ToolbarTheme"
-                    app:popupTheme="@style/ToolbarTheme.Popup"
-                    app:navigationIcon="@drawable/ic_arrow"/>
+                    app:popupTheme="@style/ToolbarTheme.Popup" />
 
             </com.google.android.material.appbar.AppBarLayout>
 
