--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -19,5 +19,7 @@
     <color name="blue_primary">#03A9F4</color>
     <color name="blue_primary_variant">#C1E7F8</color>
 
-
+    <color name="green">#45E100</color>
+    <color name="transparent_dark">#991F222C</color>
+    <color name="transparent_light">#67FFFFFF</color>
 </resources>
